The new 'issues' section in the learn bar is hidden by default
The issues section is only shown when the API reports >0 issues for an implementation

--- a/base.css
+++ b/base.css
@@ -55,6 +55,10 @@ hr {
 	margin-bottom: 0;
 }
 
+#issue-count {
+	display: none;
+}
+
 .quote {
 	border: none;
 	margin: 20px 0 60px 0;
